--- a/content/post/2018-05-02-tidying-messy-excel-data-tidyxl.Rmd
+++ b/content/post/2018-05-02-tidying-messy-excel-data-tidyxl.Rmd
@@ -4,8 +4,8 @@ author: Abhijit Dasgupta
 date: '2018-05-02'
 publishdate: '2018-05-03'
 slug: tidying-messy-excel-data-tidyxl
-categories: []
-tags: []
+categories: ['R']
+tags: ['R']
 header:
   caption: ''
   image: ''
@@ -30,7 +30,7 @@ d1 <- readxl::read_excel('spreadsheet1.xlsx')
 head(d1)
 ```
 
-This strategy gives us funky column names, and pushes two of the headers into data rows. Since the headers are in rows, they're a little harder to extract and work with. More worrisome is the fact that since the headers leaked into the data rows, the columns are all of type `character` rather than type `numeric`, which would now require further careful conversion after cleaning. So I don't think `readxl` is the way to go here, if there's a better solution. :wink:
+This strategy gives us funky column names, and pushes two of the headers into data rows. Since the headers are in rows, they're a little harder to extract and work with. More worrisome is the fact that since the headers leaked into the data rows, the columns are all of type `character` rather than type `numeric`, which would now require further careful conversion after cleaning. So I don't think `readxl` is the way to go here, if there's a better solution. 
 
 ## Attempt 2 (tidyxl)
 
@@ -74,7 +74,7 @@ head(cleanData1(d2))
 
 This is a lot of data munging, and though `dplyr` is powerful, it took a lot of trial and error to get the final pipeline done. 
 
-Nonetheless, I was really psyched about `tidyxl`, since it made a job that would have taken manual manipulation automated (I had 12 spreadsheets like this to process). I was going to write a blog post on this cool package that made my life dealing with messy Excel file a piece of cake. But wait, there's more...
+Nonetheless, I was really psyched about `tidyxl`, since it automated a job that would have taken manual manipulation (I had 12 spreadsheets like this to process). I was going to write a blog post on this cool package that made my life dealing with messy Excel file a piece of cake. But wait, there's more...
 
 ## Attempt 3 (tidyxl + unpivotr)
 
