--- a/content/post/2018-05-16-cleaning-up-tables.Rmd
+++ b/content/post/2018-05-16-cleaning-up-tables.Rmd
@@ -139,7 +139,7 @@ The second example can be solved by extracting elements of quosures, which are e
 clean_cols <- function(x, ...){
   colvs = quos(...)
   for(i in 1:length(colvs)){
-    rowvar <-  rlang::sym(paste0('rown',i))
+    rowvar <-  rlang::sym(paste0('rown',i)) # Create dummy
     x <- x %>% group_by(!!!colvs[1:i]) %>% mutate(!!rowvar := row_number()) %>% 
       ungroup()
   }
@@ -147,7 +147,7 @@ clean_cols <- function(x, ...){
     rowvar <- rlang::sym(paste0('rown',i))
     x <- x %>% mutate_at(vars(!!colvs[[i]]), funs(ifelse(!!rowvar > 1, '', .)))
   }
-  x <- x %>% select(-starts_with('rown'))
+  x <- x %>% select(-starts_with('rown')) # remove dummies
   return(x)
 }
 ```
