Added link to spreadsheet for tidy data

--- a/content/post/2018-05-02-tidying-messy-excel-data-tidyxl.Rmd
+++ b/content/post/2018-05-02-tidying-messy-excel-data-tidyxl.Rmd
@@ -14,6 +14,7 @@ header:
 Well, here's what I was dealing with:
 
 ![*Exemplar Excel file from collaborator*](/img/spreadsheet1.png)
+(You can download this dataset for your playtime [here](/data/spreadsheet1.xlsx))
 
 Notice that we have 3 header rows, first with patient IDs, second with spine region, and third with variable names (A and B, to protect the innocent). 
 
